samples/_failures_safe/1761412069_7f8762_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8357f1f9.c: In function ‘main’:
./samples/SAFE/__tmp_8357f1f9.c:148:5: error: expected expression at end of input
  148 |     addEdge(graph, 0,
      |     ^~~~~~~
./samples/SAFE/__tmp_8357f1f9.c:148:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_8357f1f9.c:40:6: note: declared here
   40 | void addEdge(struct Graph* graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_8357f1f9.c:148:5: error: expected declaration or statement at end of input
  148 |     addEdge(graph, 0,
      |     ^~~~~~~
